# CMakePro_LifeGame

./: .gitignore  AGENTS.md  README.md
.github/workflows/: release.yml
CMakePro_CUDA_LifeGame_V2/: CMakeLists.txt
CMakePro_CUDA_LifeGame_V2/CUDA_Kernels/: Cuda_Check.cu  Cuda_Check.cuh
CMakePro_CUDA_LifeGame_V2/Main_cpp/: CMakePro_cuda.cpp
CMakePro_CUDA_LifeGame_V2/Main_header/: CMakePro_cuda.h  Common.h
CMakePro_CUDA_LifeGame_V2/cmake/: EmbedResources.cmake
CMakePro_CUDA_LifeGame_V2/resources_LifeGame_V2/presets/: acorn.rle  amoeba_seed.rle  amoeba_soup.rle  anneal_blob.rle  anneal_crystal.rle  beacon.rle  blinker.rle  daynight_block.rle  daynight_seed.rle  diamoeba_soup.rle  diamoeba_spacefiller.rle  diehard.rle  fredkin_block.rle  glider_synth.rle  lfod_duoplet.rle  lfod_moon.rle  loafer.rle  lwd_ladder.rle  lwd_line.rle  max_spacefiller.rle  maze_soup.rle  morley_glider.rle  morley_puffer.rle  pentadecathlon.rle  pi_heptomino.rle  pulsar.rle  replicator.rle  rpentomino.rle  seeds_dot.rle  seeds_photon.rle  serviettes_rug.rle  switch_engine.rle  toad.rle  turing_machine.rle  two_by_two.rle  walled_block.rle
CMakePro_CUDA_LifeGame_V2/scripts/: generate_embed_registry.py
LifeGame_V2/CMakePro_CUDA_LifeGame_V2/: imgui.ini
scripts/: build_stress_presets.py  fix_preset_rles.py  generate_new_presets.py  validate_presets.py
